# platform.upstream.fsync

./: Contributors  Hacks  License  Makefile  README  config.h.in  configure.in  fsync.c  fsync.spec  project.config
docs/: Makefile  fsync.1
packaging/: fsync.spec
